Project

General

Profile

Actions

Bug #21455

closed

rgw file write error

Added by Zongyou Yao over 6 years ago. Updated about 6 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
luminous, jewel
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

I am using ceph (master branch) + nfs-ganesha(master branch), and mount a bucket with sync option.
But even using sync option, the write offset sent by nfs client can also may overlap, and rgw file checks the offset is non-contiguous write position and return IO ERROR.


Files

rgw_file_bug.png (77.2 KB) rgw_file_bug.png Zongyou Yao, 09/19/2017 01:01 PM
rgw_file_write_io_error.pcap.tar.gz (4.23 KB) rgw_file_write_io_error.pcap.tar.gz Zongyou Yao, 09/19/2017 01:19 PM

Related issues 2 (0 open2 closed)

Copied to rgw - Backport #21545: luminous: rgw file write errorResolvedAbhishek LekshmananActions
Copied to rgw - Backport #21546: jewel: rgw file write errorResolvedNathan CutlerActions
Actions #1

Updated by Matt Benjamin over 6 years ago

  • Backport set to luminous, jewel, kraken

Zongyou Yao pushed the following proposed fix:
https://github.com/ceph/ceph/pull/17809

Actions #2

Updated by Matt Benjamin over 6 years ago

  • Status changed from New to Fix Under Review
  • Assignee set to Matt Benjamin
Actions #3

Updated by Matt Benjamin over 6 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #4

Updated by Nathan Cutler over 6 years ago

  • Backport changed from luminous, jewel, kraken to luminous, jewel

Matt, kraken is EoL - removing on the assumption it was added by mistake. Feel free to reinstate it if there is a particular reason why it is needed.

Actions #5

Updated by Matt Benjamin over 6 years ago

Sorry, thanks for correcting.

Matt

Actions #6

Updated by Nathan Cutler over 6 years ago

Actions #7

Updated by Nathan Cutler over 6 years ago

Actions #8

Updated by Nathan Cutler about 6 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF