rgw_file: fix write error when the write offset overlaps.

Fixes: http://tracker.ceph.com/issues/21455

Signed-off-by: Yao Zongyou <yaozongyou@vip.qq.com>
(cherry picked from commit 872d73f945364002f0fa31762e6976db5b4b3c19)